force-app/main/default/objects/Service_Routing_Rule__mdt/Service_Routing_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Service Routing Rule</label>
    <pluralLabel>Service Routing Rules</pluralLabel>
</CustomObject>