force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Only evaluate when the inbound request carries this channel. Blank matches any.</description>
    <label>Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>