force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Field_2_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_2_API_Name__c</fullName>
    <label>Field 2 API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>