force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Operator_2__c.field-meta.xml
<CustomField>
    <fullName>Operator_2__c</fullName>
    <label>Operator 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Is Null</fullName>
            </value>
            <value>
                <fullName>Is Not Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>