force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Rules are evaluated ascending. First match wins unless Stop Processing is unchecked.</description>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>100</defaultValue>
</CustomField>