force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <label>Required Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>