force-app/main/default/objects/Service_Routing_Rule__mdt/fields/SLA_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SLA_Minutes__c</fullName>
    <label>SLA Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>