force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>API name the rule applies to, e.g. Case. Blank matches any object.</description>
    <label>Source Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>