force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Stop_Processing__c.field-meta.xml
<CustomField>
    <fullName>Stop_Processing__c</fullName>
    <label>Stop Processing</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>