force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Target_Queue__c.field-meta.xml
<CustomField>
    <fullName>Target_Queue__c</fullName>
    <description>Developer Name of the Service Queue that receives the work.</description>
    <label>Target Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>