force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Value_1__c.field-meta.xml
<CustomField>
    <fullName>Value_1__c</fullName>
    <description>For the In operator use a semicolon separated list.</description>
    <label>Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>