force-app/main/default/objects/Service_Routing_Rule__mdt/fields/Value_2__c.field-meta.xml
<CustomField>
    <fullName>Value_2__c</fullName>
    <label>Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>